indentation, minor tweaks, and grasp for new ar tag

--- a/baxter_grasps_server/grasps/flour_bowl/flour_bowl.yaml
+++ b/baxter_grasps_server/grasps/flour_bowl/flour_bowl.yaml
@@ -1,24 +1,19 @@
 - allowed_touch_objects: []
   grasp_pose:
     header:
-      frame_id: left_wrist
+      frame_id: /reference/left_gripper
       seq: 0
       stamp: {nsecs: 0, secs: 0}
     pose:
-      orientation: {w: -0.0490117330636, x: -0.0519519984909, y: 0.993737118876, z: 0.0859382245771}
-      position: {x: 0.102686493716, y: -0.0422891119225, z: 0.260769611376}
+      orientation: {w: 0.0213967494174, x: 0.656385158631, y: 0.752124947322, z: -0.0548522220089}
+      position: {x: 0.100267868051, y: 0.0818831967856, z: 0.112637397691}
   grasp_posture:
     header:
       frame_id: ''
       seq: 0
       stamp: {nsecs: 0, secs: 0}
-    joint_names: [left_gripper_l_finger_joint]
-    points:
-    - accelerations: []
-      effort: []
-      positions: [-0.0125]
-      time_from_start: {nsecs: 0, secs: 0}
-      velocities: []
+    joint_names: []
+    points: []
   grasp_quality: 1.0
   id: 0
   max_contact_force: 0.0
@@ -54,34 +49,24 @@
       frame_id: ''
       seq: 0
       stamp: {nsecs: 0, secs: 0}
-    joint_names: [left_gripper_l_finger_joint]
-    points:
-    - accelerations: []
-      effort: []
-      positions: [0.095]
-      time_from_start: {nsecs: 0, secs: 0}
-      velocities: []
+    joint_names: []
+    points: []
 - allowed_touch_objects: []
   grasp_pose:
     header:
-      frame_id: left_wrist
+      frame_id: /reference/left_gripper
       seq: 0
       stamp: {nsecs: 0, secs: 0}
     pose:
-      orientation: {w: -0.0270897611465, x: -0.217345870368, y: 0.96781578248, z: 0.123933565496}
-      position: {x: 0.11303178049, y: -0.0621020273679, z: 0.262071851515}
+      orientation: {w: 0.0160478577682, x: 0.654596765914, y: 0.7528991818, z: -0.0662447157252}
+      position: {x: 0.109209542721, y: 0.0873762538145, z: 0.0559920143067}
   grasp_posture:
     header:
       frame_id: ''
       seq: 0
       stamp: {nsecs: 0, secs: 0}
-    joint_names: [left_gripper_l_finger_joint]
-    points:
-    - accelerations: []
-      effort: []
-      positions: [-0.0125]
-      time_from_start: {nsecs: 0, secs: 0}
-      velocities: []
+    joint_names: []
+    points: []
   grasp_quality: 1.0
   id: 1
   max_contact_force: 0.0
@@ -117,451 +102,5 @@
       frame_id: ''
       seq: 0
       stamp: {nsecs: 0, secs: 0}
-    joint_names: [left_gripper_l_finger_joint]
-    points:
-    - accelerations: []
-      effort: []
-      positions: [0.095]
-      time_from_start: {nsecs: 0, secs: 0}
-      velocities: []
-- allowed_touch_objects: []
-  grasp_pose:
-    header:
-      frame_id: left_wrist
-      seq: 0
-      stamp: {nsecs: 0, secs: 0}
-    pose:
-      orientation: {w: -0.0609071849669, x: -0.494364626507, y: 0.859351453054, z: 0.115797284131}
-      position: {x: 0.166510878773, y: -0.0226219531664, z: 0.259080469955}
-  grasp_posture:
-    header:
-      frame_id: ''
-      seq: 0
-      stamp: {nsecs: 0, secs: 0}
-    joint_names: [left_gripper_l_finger_joint]
-    points:
-    - accelerations: []
-      effort: []
-      positions: [-0.0125]
-      time_from_start: {nsecs: 0, secs: 0}
-      velocities: []
-  grasp_quality: 1.0
-  id: 2
-  max_contact_force: 0.0
-  post_grasp_retreat:
-    desired_distance: 0.1
-    direction:
-      header:
-        frame_id: world
-        seq: 0
-        stamp: {nsecs: 0, secs: 0}
-      vector: {x: 0.0, y: 0.0, z: 1.0}
-    min_distance: 0.05
-  post_place_retreat:
-    desired_distance: 0.1
-    direction:
-      header:
-        frame_id: world
-        seq: 0
-        stamp: {nsecs: 0, secs: 0}
-      vector: {x: 0.0, y: 0.0, z: 1.0}
-    min_distance: 0.05
-  pre_grasp_approach:
-    desired_distance: 0.1
-    direction:
-      header:
-        frame_id: left_gripper
-        seq: 0
-        stamp: {nsecs: 0, secs: 0}
-      vector: {x: 0.0, y: 0.0, z: 1.0}
-    min_distance: 0.05
-  pre_grasp_posture:
-    header:
-      frame_id: ''
-      seq: 0
-      stamp: {nsecs: 0, secs: 0}
-    joint_names: [left_gripper_l_finger_joint]
-    points:
-    - accelerations: []
-      effort: []
-      positions: [0.095]
-      time_from_start: {nsecs: 0, secs: 0}
-      velocities: []
-- allowed_touch_objects: []
-  grasp_pose:
-    header:
-      frame_id: left_wrist
-      seq: 0
-      stamp: {nsecs: 0, secs: 0}
-    pose:
-      orientation: {w: -0.0578646491829, x: -0.666157974042, y: 0.739027197972, z: 0.0820002234927}
-      position: {x: 0.168279108862, y: 0.0311568265915, z: 0.264068132687}
-  grasp_posture:
-    header:
-      frame_id: ''
-      seq: 0
-      stamp: {nsecs: 0, secs: 0}
-    joint_names: [left_gripper_l_finger_joint]
-    points:
-    - accelerations: []
-      effort: []
-      positions: [-0.0125]
-      time_from_start: {nsecs: 0, secs: 0}
-      velocities: []
-  grasp_quality: 1.0
-  id: 3
-  max_contact_force: 0.0
-  post_grasp_retreat:
-    desired_distance: 0.1
-    direction:
-      header:
-        frame_id: world
-        seq: 0
-        stamp: {nsecs: 0, secs: 0}
-      vector: {x: 0.0, y: 0.0, z: 1.0}
-    min_distance: 0.05
-  post_place_retreat:
-    desired_distance: 0.1
-    direction:
-      header:
-        frame_id: world
-        seq: 0
-        stamp: {nsecs: 0, secs: 0}
-      vector: {x: 0.0, y: 0.0, z: 1.0}
-    min_distance: 0.05
-  pre_grasp_approach:
-    desired_distance: 0.1
-    direction:
-      header:
-        frame_id: left_gripper
-        seq: 0
-        stamp: {nsecs: 0, secs: 0}
-      vector: {x: 0.0, y: 0.0, z: 1.0}
-    min_distance: 0.05
-  pre_grasp_posture:
-    header:
-      frame_id: ''
-      seq: 0
-      stamp: {nsecs: 0, secs: 0}
-    joint_names: [left_gripper_l_finger_joint]
-    points:
-    - accelerations: []
-      effort: []
-      positions: [0.095]
-      time_from_start: {nsecs: 0, secs: 0}
-      velocities: []
-- allowed_touch_objects: []
-  grasp_pose:
-    header:
-      frame_id: left_wrist
-      seq: 0
-      stamp: {nsecs: 0, secs: 0}
-    pose:
-      orientation: {w: -0.0341786153142, x: 0.313973392851, y: 0.94377890437, z: -0.0976417456934}
-      position: {x: 0.130042329504, y: 0.140111091568, z: 0.259615264138}
-  grasp_posture:
-    header:
-      frame_id: ''
-      seq: 0
-      stamp: {nsecs: 0, secs: 0}
-    joint_names: [left_gripper_l_finger_joint]
-    points:
-    - accelerations: []
-      effort: []
-      positions: [-0.0125]
-      time_from_start: {nsecs: 0, secs: 0}
-      velocities: []
-  grasp_quality: 1.0
-  id: 4
-  max_contact_force: 0.0
-  post_grasp_retreat:
-    desired_distance: 0.1
-    direction:
-      header:
-        frame_id: world
-        seq: 0
-        stamp: {nsecs: 0, secs: 0}
-      vector: {x: 0.0, y: 0.0, z: 1.0}
-    min_distance: 0.05
-  post_place_retreat:
-    desired_distance: 0.1
-    direction:
-      header:
-        frame_id: world
-        seq: 0
-        stamp: {nsecs: 0, secs: 0}
-      vector: {x: 0.0, y: 0.0, z: 1.0}
-    min_distance: 0.05
-  pre_grasp_approach:
-    desired_distance: 0.1
-    direction:
-      header:
-        frame_id: left_gripper
-        seq: 0
-        stamp: {nsecs: 0, secs: 0}
-      vector: {x: 0.0, y: 0.0, z: 1.0}
-    min_distance: 0.05
-  pre_grasp_posture:
-    header:
-      frame_id: ''
-      seq: 0
-      stamp: {nsecs: 0, secs: 0}
-    joint_names: [left_gripper_l_finger_joint]
-    points:
-    - accelerations: []
-      effort: []
-      positions: [0.095]
-      time_from_start: {nsecs: 0, secs: 0}
-      velocities: []
-- allowed_touch_objects: []
-  grasp_pose:
-    header:
-      frame_id: left_wrist
-      seq: 0
-      stamp: {nsecs: 0, secs: 0}
-    pose:
-      orientation: {w: -0.0471117796403, x: -0.0856974018211, y: 0.989044813224, z: -0.110574829756}
-      position: {x: 0.0847186286634, y: 0.158523014727, z: 0.259267491555}
-  grasp_posture:
-    header:
-      frame_id: ''
-      seq: 0
-      stamp: {nsecs: 0, secs: 0}
-    joint_names: [left_gripper_l_finger_joint]
-    points:
-    - accelerations: []
-      effort: []
-      positions: [-0.0125]
-      time_from_start: {nsecs: 0, secs: 0}
-      velocities: []
-  grasp_quality: 1.0
-  id: 5
-  max_contact_force: 0.0
-  post_grasp_retreat:
-    desired_distance: 0.1
-    direction:
-      header:
-        frame_id: world
-        seq: 0
-        stamp: {nsecs: 0, secs: 0}
-      vector: {x: 0.0, y: 0.0, z: 1.0}
-    min_distance: 0.05
-  post_place_retreat:
-    desired_distance: 0.1
-    direction:
-      header:
-        frame_id: world
-        seq: 0
-        stamp: {nsecs: 0, secs: 0}
-      vector: {x: 0.0, y: 0.0, z: 1.0}
-    min_distance: 0.05
-  pre_grasp_approach:
-    desired_distance: 0.1
-    direction:
-      header:
-        frame_id: left_gripper
-        seq: 0
-        stamp: {nsecs: 0, secs: 0}
-      vector: {x: 0.0, y: 0.0, z: 1.0}
-    min_distance: 0.05
-  pre_grasp_posture:
-    header:
-      frame_id: ''
-      seq: 0
-      stamp: {nsecs: 0, secs: 0}
-    joint_names: [left_gripper_l_finger_joint]
-    points:
-    - accelerations: []
-      effort: []
-      positions: [0.095]
-      time_from_start: {nsecs: 0, secs: 0}
-      velocities: []
-- allowed_touch_objects: []
-  grasp_pose:
-    header:
-      frame_id: left_wrist
-      seq: 0
-      stamp: {nsecs: 0, secs: 0}
-    pose:
-      orientation: {w: 0.00911515202809, x: -0.373677686596, y: 0.911154979031, z: -0.173431556331}
-      position: {x: -0.0109455517008, y: 0.155342336501, z: 0.256668805095}
-  grasp_posture:
-    header:
-      frame_id: ''
-      seq: 0
-      stamp: {nsecs: 0, secs: 0}
-    joint_names: [left_gripper_l_finger_joint]
-    points:
-    - accelerations: []
-      effort: []
-      positions: [-0.0125]
-      time_from_start: {nsecs: 0, secs: 0}
-      velocities: []
-  grasp_quality: 1.0
-  id: 6
-  max_contact_force: 0.0
-  post_grasp_retreat:
-    desired_distance: 0.1
-    direction:
-      header:
-        frame_id: world
-        seq: 0
-        stamp: {nsecs: 0, secs: 0}
-      vector: {x: 0.0, y: 0.0, z: 1.0}
-    min_distance: 0.05
-  post_place_retreat:
-    desired_distance: 0.1
-    direction:
-      header:
-        frame_id: world
-        seq: 0
-        stamp: {nsecs: 0, secs: 0}
-      vector: {x: 0.0, y: 0.0, z: 1.0}
-    min_distance: 0.05
-  pre_grasp_approach:
-    desired_distance: 0.1
-    direction:
-      header:
-        frame_id: left_gripper
-        seq: 0
-        stamp: {nsecs: 0, secs: 0}
-      vector: {x: 0.0, y: 0.0, z: 1.0}
-    min_distance: 0.05
-  pre_grasp_posture:
-    header:
-      frame_id: ''
-      seq: 0
-      stamp: {nsecs: 0, secs: 0}
-    joint_names: [left_gripper_l_finger_joint]
-    points:
-    - accelerations: []
-      effort: []
-      positions: [0.095]
-      time_from_start: {nsecs: 0, secs: 0}
-      velocities: []
-- allowed_touch_objects: []
-  grasp_pose:
-    header:
-      frame_id: left_wrist
-      seq: 0
-      stamp: {nsecs: 0, secs: 0}
-    pose:
-      orientation: {w: 0.106295038729, x: -0.659711721677, y: 0.729492404045, z: -0.146022742968}
-      position: {x: -0.059708714239, y: 0.0709869247741, z: 0.248262913054}
-  grasp_posture:
-    header:
-      frame_id: ''
-      seq: 0
-      stamp: {nsecs: 0, secs: 0}
-    joint_names: [left_gripper_l_finger_joint]
-    points:
-    - accelerations: []
-      effort: []
-      positions: [-0.0125]
-      time_from_start: {nsecs: 0, secs: 0}
-      velocities: []
-  grasp_quality: 1.0
-  id: 7
-  max_contact_force: 0.0
-  post_grasp_retreat:
-    desired_distance: 0.1
-    direction:
-      header:
-        frame_id: world
-        seq: 0
-        stamp: {nsecs: 0, secs: 0}
-      vector: {x: 0.0, y: 0.0, z: 1.0}
-    min_distance: 0.05
-  post_place_retreat:
-    desired_distance: 0.1
-    direction:
-      header:
-        frame_id: world
-        seq: 0
-        stamp: {nsecs: 0, secs: 0}
-      vector: {x: 0.0, y: 0.0, z: 1.0}
-    min_distance: 0.05
-  pre_grasp_approach:
-    desired_distance: 0.1
-    direction:
-      header:
-        frame_id: left_gripper
-        seq: 0
-        stamp: {nsecs: 0, secs: 0}
-      vector: {x: 0.0, y: 0.0, z: 1.0}
-    min_distance: 0.05
-  pre_grasp_posture:
-    header:
-      frame_id: ''
-      seq: 0
-      stamp: {nsecs: 0, secs: 0}
-    joint_names: [left_gripper_l_finger_joint]
-    points:
-    - accelerations: []
-      effort: []
-      positions: [0.095]
-      time_from_start: {nsecs: 0, secs: 0}
-      velocities: []
-- allowed_touch_objects: []
-  grasp_pose:
-    header:
-      frame_id: left_wrist
-      seq: 0
-      stamp: {nsecs: 0, secs: 0}
-    pose:
-      orientation: {w: -0.0688368078772, x: 0.776601258621, y: -0.616501380943, z: 0.109900074092}
-      position: {x: -0.0430054215065, y: 0.018692204541, z: 0.258090561802}
-  grasp_posture:
-    header:
-      frame_id: ''
-      seq: 0
-      stamp: {nsecs: 0, secs: 0}
-    joint_names: [left_gripper_l_finger_joint]
-    points:
-    - accelerations: []
-      effort: []
-      positions: [-0.0125]
-      time_from_start: {nsecs: 0, secs: 0}
-      velocities: []
-  grasp_quality: 1.0
-  id: 8
-  max_contact_force: 0.0
-  post_grasp_retreat:
-    desired_distance: 0.1
-    direction:
-      header:
-        frame_id: world
-        seq: 0
-        stamp: {nsecs: 0, secs: 0}
-      vector: {x: 0.0, y: 0.0, z: 1.0}
-    min_distance: 0.05
-  post_place_retreat:
-    desired_distance: 0.1
-    direction:
-      header:
-        frame_id: world
-        seq: 0
-        stamp: {nsecs: 0, secs: 0}
-      vector: {x: 0.0, y: 0.0, z: 1.0}
-    min_distance: 0.05
-  pre_grasp_approach:
-    desired_distance: 0.1
-    direction:
-      header:
-        frame_id: left_gripper
-        seq: 0
-        stamp: {nsecs: 0, secs: 0}
-      vector: {x: 0.0, y: 0.0, z: 1.0}
-    min_distance: 0.05
-  pre_grasp_posture:
-    header:
-      frame_id: ''
-      seq: 0
-      stamp: {nsecs: 0, secs: 0}
-    joint_names: [left_gripper_l_finger_joint]
-    points:
-    - accelerations: []
-      effort: []
-      positions: [0.095]
-      time_from_start: {nsecs: 0, secs: 0}
-      velocities: []
+    joint_names: []
+    points: []
