--- a/baxter_grasps_server/grasps/light_green_bowl/light_green_bowl.yaml
+++ b/baxter_grasps_server/grasps/light_green_bowl/light_green_bowl.yaml
@@ -5,8 +5,8 @@
       seq: 0
       stamp: {nsecs: 0, secs: 0}
     pose:
-      orientation: {w: -0.0354890690127, x: 0.0318687888793, y: 0.998748271893, z: -0.015059736617}
-      position: {x: 0.15903609703, y: 0.325868092036, z: 0.129638260767}
+      orientation: {w: -0.0346910942668, x: -0.0973436035787, y: 0.994202122568, z: -0.0297134700433}
+      position: {x: -0.0371279063221, y: 0.0458096987511, z: 0.143832394395}
   grasp_posture:
     header:
       frame_id: ''
@@ -58,8 +58,9 @@
       seq: 0
       stamp: {nsecs: 0, secs: 0}
     pose:
-      orientation: {w: -0.00322069894467, x: 0.0194206480016, y: 0.999493276314, z: -0.025013119192}
-      position: {x: 0.171587004565, y: 0.327576307622, z: 0.065108749464}
+      orientation: {w: -0.00858549481114, x: -0.0865980689985, y: 0.995520480202,
+        z: -0.0369599407936}
+      position: {x: -0.0390700308014, y: 0.0440823266598, z: 0.0828548528262}
   grasp_posture:
     header:
       frame_id: ''
