--- a/baxter_grasps_server/grasps/yellow_bowl/yellow_bowl.yaml
+++ b/baxter_grasps_server/grasps/yellow_bowl/yellow_bowl.yaml
@@ -5,9 +5,8 @@
       seq: 0
       stamp: {nsecs: 0, secs: 0}
     pose:
-      orientation: {w: -0.0330473625153, x: 0.000143837320228, y: 0.996892978271,
-        z: -0.0714999371775}
-      position: {x: -0.0213469680657, y: 0.0523089201831, z: 0.146020581129}
+      orientation: {w: 0.0064518961284, x: -0.0915164446533, y: 0.993301766227, z: -0.0702475238312}
+      position: {x: -0.042509278225, y: 0.0421559810074, z: 0.141622610622}
   grasp_posture:
     header:
       frame_id: ''
@@ -59,9 +58,8 @@
       seq: 0
       stamp: {nsecs: 0, secs: 0}
     pose:
-      orientation: {w: -0.000526214508237, x: 0.00147930195109, y: 0.99791801594,
-        z: -0.0644761058624}
-      position: {x: -0.00764813667148, y: 0.0422419392443, z: 0.0922559918333}
+      orientation: {w: 0.0492648796489, x: -0.0608354609922, y: 0.995417309222, z: -0.0549217517872}
+      position: {x: -0.0194532256383, y: 0.0353311105377, z: 0.0865968256485}
   grasp_posture:
     header:
       frame_id: ''
